Version 0.10.1 (2010/04/19)

  * cvcontour.cpp: "cvWriteContourPolygonCSV" function.

Version 0.10.0 (2010/03/18)

  * cvlabel.cpp: new labeling algorithm.

  * cvcontour.cpp: "cvGetContour" function deleted (this functionality is
  doing now by "cvLabel").

  * cvcolor.cpp: new file. Function: "cvBlobMeanColor".

  * cvblob.cpp: new function "cvRenderBlob". Fixed bug in "cvRenderBlobs" (now
  uses "cvRenderBlob").

  * cvaux.cpp: bug fixed (change "abs" for "fabs"). Thanks, sircoko.

Version 0.9.14 (2010/03/10)

  * cvlabel.cpp, cvblob.h: function "cvGetLabel".

  * Makefile, red_object_tracking.cpp: sample program.

Version 0.9.13 (2010/01/01)

  * several files: namespace "cvb".

  * cvblob.h, cvcontour.cpp: function to write contour to a SVG file.

  * cvblob.h, cvtrack.cpp: tracking algorithm rewritten and new mode for
  render tracks.

Version 0.9.12 (2009/12/01)

  * cvaux.cpp: new file. Auxiliar functions.

  * cvcontour.cpp: bug fixed in cvConvertChainCodesToPolygon. Problem with
  blobs of one pixel. New functions.

  * cvtrack.cpp: memory leak fixed in cvRenderTracks.

  * cvblob.h: doxygen documentation. New functions.

Version 0.9.11 (2009/10/01)

  * cvblob.cpp, cvlabel.cpp, cvtracker.cpp, cvcontour.cpp: error handling
  OpenCV's style.

  * cvlabel.ccp: Fixed another bug about ranges.

Version 0.9.10 (2009/09/30)

  * cvlabel.cpp: Fixed a mistake in the labeling algorithm.

  * cvcontour.cpp: new file. Contours.

  * cvblob.h: contours types and functions.

  * test.cpp: added ROI and contours for test.

Version 0.9.9 (2009/09/11)

  * cvblob.cpp, cvlabel.cpp: ImageROI support by Kouichi Nishino.

  * cvblob.h, cvtrack.cpp: new features. Tracking implementation.

  * test_tracking.cpp: new test for tracking. 

  * EnterExitCrossingPaths2front_blobs.mpeg,
  EnterExitCrossingPaths2front_blobs.txt: new files. Video for tracking test
  and info about the video.

  * CMakeLists.txt: various files. Updated. Also "Release/Debug" flag added to